Update headshot to lulu_wang_crop.png

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         <table cellspacing="0" cellpadding="0">
             <tr>
                 <td class="photo-cell">
-                    <img src="papers/Wang_Lulu-web-2023.jpg" alt="Lulu Wang" />
+                    <img src="papers/lulu_wang_crop.png" alt="Lulu Wang" />
                 </td>
                 <td>
                     <h1>Lulu Wang</h1>
