Add Resting Papers section with Startup Antitrust paper

--- a/research.html
+++ b/research.html
@@ -193,6 +193,16 @@
             <div class="version-info">May 2024</div>
         </div>
 
+        <h2>Resting Papers</h2>
+
+        <div class="publication">
+            <div class="publication-title">Startup Antitrust and Financial Frictions</div>
+            <div class="version-info">June 2022</div>
+            <div class="links">
+                <a href="mailto:lulu.wang@kellogg.northwestern.edu">Contact for Draft</a>
+            </div>
+        </div>
+
         <h2>Work in Progress</h2>
 
         <div class="publication">
