Add Contact for Draft links, add paper link for Startup Antitrust

--- a/research.html
+++ b/research.html
@@ -185,12 +185,18 @@
             <div class="publication-title">Who Pays for Payments</div>
             <div class="authors">(with Mark Egan, Gregor Matvos, Amit Seru, and Vincent Yao)</div>
             <div class="version-info">January 2026</div>
+            <div class="links">
+                <a href="mailto:lulu.wang@kellogg.northwestern.edu">Contact for Draft</a>
+            </div>
         </div>
 
         <div class="publication">
             <div class="publication-title">Minority Specialized Lenders</div>
             <div class="authors">(with Erica Jiang, Gregor Matvos, and Amit Seru)</div>
             <div class="version-info">May 2024</div>
+            <div class="links">
+                <a href="mailto:lulu.wang@kellogg.northwestern.edu">Contact for Draft</a>
+            </div>
         </div>
 
         <h2>Resting Papers</h2>
@@ -199,7 +205,7 @@
             <div class="publication-title">Startup Antitrust and Financial Frictions</div>
             <div class="version-info">June 2022</div>
             <div class="links">
-                <a href="mailto:lulu.wang@kellogg.northwestern.edu">Contact for Draft</a>
+                <a href="papers/antitrust_fin_frictions.pdf">Paper</a>
             </div>
         </div>
 
