Make Contact for Draft plain text

--- a/research.html
+++ b/research.html
@@ -186,7 +186,7 @@
             <div class="authors">(with Mark Egan, Gregor Matvos, Amit Seru, and Vincent Yao)</div>
             <div class="version-info">January 2026</div>
             <div class="links">
-                <a href="mailto:lulu.wang@kellogg.northwestern.edu">Contact for Draft</a>
+                Contact for Draft
             </div>
         </div>
 
@@ -195,7 +195,7 @@
             <div class="authors">(with Erica Jiang, Gregor Matvos, and Amit Seru)</div>
             <div class="version-info">May 2024</div>
             <div class="links">
-                <a href="mailto:lulu.wang@kellogg.northwestern.edu">Contact for Draft</a>
+                Contact for Draft
             </div>
         </div>
 
