Move Financial Supermarkets to Working Papers

--- a/research.html
+++ b/research.html
@@ -199,6 +199,14 @@
             </div>
         </div>
 
+        <div class="publication">
+            <div class="publication-title">Financial Supermarkets</div>
+            <div class="authors">(with Shengmao Cao)</div>
+            <div class="links">
+                Contact for Draft
+            </div>
+        </div>
+
         <h2>Resting Papers</h2>
 
         <div class="publication">
@@ -210,11 +218,6 @@
         </div>
 
         <h2>Work in Progress</h2>
-
-        <div class="publication">
-            <div class="publication-title">Financial Supermarkets</div>
-            <div class="authors">(with Shengmao Cao)</div>
-        </div>
 
         <div class="publication">
             <div class="publication-title">Interchange and Informality</div>
